web-infras/parser/tests/fixtures/babel/es2015/uncategorised/228/output.txt
[SyntaxError]: duplicate params (1,38)
1|function a() { "use strict"; ({ b(t, t) { } }); }
 |                                    ^
